--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,5 @@
 <h1>All Tasks</h1>
+<h3><a href="/tasks/new">New task</a></h3>
 
 <% @tasks.each do |task| %>
   <h3><a href="/tasks/<%= task.id %>"><%= task.title %></a></h3>
